Fixed link to previous lab

--- a/lab1.html
+++ b/lab1.html
@@ -28,11 +28,12 @@
           a finite automaton.</li>
       </ul>
 
-      A previous <a href="http://www1.eafit.edu.co/asr/courses/
-      automata-CM0081/labs/2010-2/fa-re.html">programming lab</a> tackled
-      the second statement, however in this programming lab the aim is to
-      implement a program that shows the first one, and thus, showing the
-      equivalency between both.</p>
+      A previous <a href=
+                    "http://www1.eafit.edu.co/asr/courses/automata-CM0081/labs/2010-2/fa-re.html">
+      programming lab</a> tackled the second statement. However in this
+      programming lab the aim is to implement a program that shows the first
+      one, and thus, showing the equivalency between finite automatons and regular
+      expressions.</p>
 
     <h3>Assignment (80%)</h3>
 
