--- a/lab1.html
+++ b/lab1.html
@@ -9,16 +9,16 @@
   </head>
 
   <body>
-    <h1 style="text-align:center;">Programming Lab 1:Converting DFAs to
+    <h1 style="text-align:center;">Programming Lab 1: Converting DFAs to
       regular expressions</h1>
 
     <h3>TA: Andrés Ortega</h3>
 
     <h3>Introduction</h3>
 
-    <p>While regular expressions and finite automatons describe languages
+    <p>While regular expressions and finite automata describe languages
       differently, both actually represent the same type of languages,
-      the "regular languages" [Hopcroft 2001]. In order to show this it
+      the "regular languages" [Hopcroft 2001]. In order to show this, it
       is first necessary to show that:
 
       <ul>
@@ -32,7 +32,7 @@
                     "http://www1.eafit.edu.co/asr/courses/automata-CM0081/labs/2010-2/fa-re.html">
       programming lab</a> tackled the second statement. However in this
       programming lab the aim is to implement a program that shows the first
-      one, and thus, showing the equivalency between finite automatons and regular
+      one, and thus, showing the equivalency between finite automata and regular
       expressions.</p>
 
     <h3>Assignment (80%)</h3>
@@ -70,12 +70,11 @@
     </ul>
 
     <h3>Examples</h3>
-    <p>Using the <code>Examples.hs</code> module in above GitHub
-    repository, this is what a sample input-output looks like:</p>
+    <p>Using the <code>DFA.hs</code> and <code>Regex.hs</code> modules in the
+      above GitHub repository, this is what a sample input-output looks like:</p>
 
     <pre>
-      GHCi> dfa2Regex $ trans (1, 3, "c") . trans (1, 2, "a") . trans (1, 2, "b") .
-            trans (2, 3, "b") . trans (3, 2, "a") . accept 3 $ initDFA 1
+      GHCi> dfa2Regex example
       Plus (Plus (Symbol "c") (Dot (Plus (Symbol "b") (Symbol "a")) (Symbol "b")))
            (Dot (Plus (Symbol "c") (Dot (Plus (Symbol "b") (Symbol "a")) (Symbol "b")))
                 (Star (Dot (Symbol "a") (Symbol "b"))))
@@ -124,7 +123,7 @@
     <li>The programming lab may either be solved on your own, or
     jointly with one other student taking the course.</li>
 
-    <li>You are to use GHC[i] ≥ 8.2.2.</li>
+    <li>You are to use GHC[i] ≥ 8.4.3.</li>
     </ul>
 
     <h3>Submission (10%)</h3>
@@ -162,9 +161,9 @@
 
     <h3>Bibliography</h3>
     <ul>
-      <li>J. E. Hopcroft, R. Motwani, and J. D. Ullman.Introduction to
-        AutomataTheory, Languages, and Computation (2nd Edition). Addison
-        Wesley,2000.isbn: 0201441241.
+      <li>J. E. Hopcroft, R. Motwani, and J. D. Ullman. Introduction to
+        Automata Theory, Languages, and Computation (2nd Edition). Addison
+        Wesley, 2001.isbn: 0201441241.
       </li>
     </ul>
 
