[ html ] Cosmetic changes.

--- a/lab1.html
+++ b/lab1.html
@@ -9,31 +9,31 @@
   </head>
 
   <body>
-    <h1 style="text-align:center;">Programming Lab 1: Converting DFAs to
-      regular expressions</h1>
+    <h1 style="text-align:center;">Programming Lab 1: Converting
+    Deterministic Finite Automata to Regular Expressions</h1>
 
     <h3>TA: Andrés Ortega</h3>
 
     <h3>Introduction</h3>
 
-    <p>While regular expressions and finite automata describe languages
-      differently, both actually represent the same type of languages,
-      the "regular languages" [Hopcroft 2001]. In order to show this, it
-      is first necessary to show that:
+    <p>While regular expressions and finite automata describe
+    languages differently, both actually represent the same type of
+    languages, the "regular languages" [Hopcroft 2001]. In order to
+    show this, it is first necessary to show that:</p>
 
-      <ul>
-        <li> Every language defined by a finite automaton is also defined
-          by a regular expression.</li>
-        <li> Every language defined by a regular expression is defined by
-          a finite automaton.</li>
-      </ul>
+    <ul>
+      <li> Every language defined by a finite automaton is also
+      defined by a regular expression.</li>
+      <li> Every language defined by a regular expression is defined
+      by a finite automaton.</li>
+    </ul>
 
-      A previous <a href=
-                    "http://www1.eafit.edu.co/asr/courses/automata-CM0081/labs/2010-2/fa-re.html">
-      programming lab</a> tackled the second statement. However in this
-      programming lab the aim is to implement a program that shows the first
-      one, and thus, showing the equivalency between finite automata and regular
-      expressions.</p>
+      <p>A previous <a href=
+      "http://www1.eafit.edu.co/asr/courses/automata-CM0081/labs/2010-2/fa-re.html">
+      programming lab</a> tackled the second statement. However in
+      this programming lab the aim is to implement a program that
+      shows the first one, and thus, showing the equivalency between
+      finite automata and regular expressions.</p>
 
     <h3>Assignment (80%)</h3>
 
@@ -161,9 +161,9 @@
 
     <h3>Bibliography</h3>
     <ul>
-      <li>J. E. Hopcroft, R. Motwani, and J. D. Ullman. Introduction to
-        Automata Theory, Languages, and Computation (2nd Edition). Addison
-        Wesley, 2001.isbn: 0201441241.
+      <li>J. E. Hopcroft, R. Motwani, and J. D. Ullman
+      (2001). Introduction to Automata Theory, Languages, and
+      Computation (2nd Edition). Addison Wesley.
       </li>
     </ul>
 
