[ html ] Fixed typos.

--- a/lab1.html
+++ b/lab1.html
@@ -16,10 +16,10 @@
 
     <h3>News</h3>
 
-    <p>(2018-08-24) The code for the Regex module was changed so that
-    now regular expressions are printed in infix notation. The example
-    was updated to reflect this change</p>
-	  
+    <p>(2018-08-24) The code for the <code>Regex</code> module was
+    changed so that now regular expressions are printed in infix
+    notation. The example was updated to reflect this change.</p>
+
     <h3>Introduction</h3>
 
     <p>While regular expressions and finite automata describe
