--- a/lab1.html
+++ b/lab1.html
@@ -47,18 +47,18 @@
     <h3>Assignment (80%)</h3>
 
     <ul>
-      <li>Download the<a href="https://github.com/"> GitHub </a>
+      <li><p>Download the<a href="https://github.com/"> GitHub </a>
       repository <a href=
-      "https://github.com/afl-eafit/2018-2-lab1">2018-2-lab1</a>.</li>
+      "https://github.com/afl-eafit/2018-2-lab1">2018-2-lab1</a>.</p></li>
 
-      <li>(70%) Using the data types in the above repository define a
-        function:
+      <li><p>(70%) Using the data types in the above repository define
+      a function:</p>
 	<pre>
 	  dfa2Regex :: DFA s c -> Regex c
 	</pre>
-	that takes a deterministic finite automaton and returns a regular
-        expression that defines the same language. All tested DFAs will
-        have their states numbered from 1.
+	<p>that takes a deterministic finite automaton and returns a
+	regular expression that defines the same language. All tested
+	DFAs will have their states numbered from 1.</p>
       </li>
 
       <li>(10%)
@@ -67,15 +67,21 @@
 	<code>-Wmissing-local-signatures</code> and
 	<code>-Wmissing-signatures</code> options.</li>
 
-	<li>Annotate (in English) your source code using
-	  <a href="http://hackage.haskell.org/package/haddock">Haddock</a>.
-	  Documentation should explain your solution for the assignment.</li>
+	<li>Annotate (in English) your source code using <a
+	href="http://hackage.haskell.org/package/haddock">Haddock</a>.
+	Documentation should explain your solution for the
+	assignment.</li>
 
-	<li>Improve your implementation with
-	  <a href="https://github.com/ndmitchell/hlint">HLint</a>.
+	<li>Improve your implementation with <a
+	href="https://github.com/ndmitchell/hlint">HLint</a>.
 	</li>
       </ul>
       </li>
+
+      <li><p>The programming lab may either be solved on your own, or
+      jointly with one other student taking the course.</p></li>
+
+      <li><p>You are to use GHC[i] ≥ 8.4.3.</p></li>
     </ul>
 
     <h3>Examples</h3>
@@ -101,8 +107,8 @@
 
     <h3>Clean code (10%)</h3>
 
-    <p>Before submitting your code, which includes your README, clean it
-    up! Clean code:</p>
+    <p>Before submitting your code, which includes your
+    <tt>README</tt> file (see below), clean it up:</p>
 
     <ul>
       <li>Does not have long lines (at most 80 columns).</li>
@@ -136,21 +142,12 @@
     </ul>
 
 
-    <h3>Notes</h3>
-
-    <ul>
-    <li>The programming lab may either be solved on your own, or
-    jointly with one other student taking the course.</li>
-
-    <li>You are to use GHC[i] ≥ 8.4.3.</li>
-    </ul>
-
     <h3>Submission (10%)</h3>
 
     <p>Submission is electronic. Send an email to
     <tt>asr(at)eafit(dot)edu(dot)co</tt> and
     <tt>aortega7(at)eafit(dot)edu(dot)co</tt> and attach a compressed
-    file (.zip or .tar.gz) with your solution.</p>
+    file (<tt>.zip</tt> or <tt>.tar.gz</tt>) with your solution.</p>
 
     <p>Your submission has to include the following:</p>
 
@@ -163,19 +160,28 @@
 	containing at least the following information:
 
 	<ul>
-	  <li>The name of your program</li>
+	  <li>The name of your program.</li>
 
-	  <li>Your name(s)</li>
+	  <li>Your name(s).</li>
 
-	  <li>A general description of your program</li>
+	  <li>A general description of your program.</li>
 
-	  <li>Information on how to use your program</li>
+	  <li>Information on how to use your program.</li>
 
-	  <li>GHC and/or Haskell platform versions used</li>
+	  <li>GHC and/or Haskell platform versions used.</li>
 	</ul>
       </li>
 
       <li>Do not include any other files.</li>
+    </ul>
+
+    <h3>Notes</h3>
+
+    <ul>
+      <li>The programming lab may either be solved on your own, or
+      jointly with one other student taking the course.</li>
+
+      <li>You are to use GHC[i] ≥ 8.4.3.</li>
     </ul>
 
     <h3>Bibliography</h3>
