[ html ] Fixed citation.

--- a/lab1.html
+++ b/lab1.html
@@ -27,8 +27,9 @@
 
     <p>While regular expressions and finite automata describe
     languages differently, both actually represent the same type of
-    languages, the "regular languages" [Hopcroft 2001]. In order to
-    show this, it is first necessary to show that:</p>
+    languages, the "regular languages" [Hopcroft, Motwani and Ullman
+    2007]. In order to show this, it is first necessary to show
+    that:</p>
 
     <ul>
       <li> Every language defined by a finite automaton is also
@@ -187,8 +188,8 @@
     <h3>Bibliography</h3>
     <ul>
       <li>J. E. Hopcroft, R. Motwani, and J. D. Ullman
-      (2001). Introduction to Automata Theory, Languages, and
-      Computation (2nd Edition). Addison Wesley.
+      (2007). Introduction to Automata Theory, Languages, and
+      Computation. 3rd edition. Pearson Education.
       </li>
     </ul>
 
